--- a/res/layout/song_item.xml
+++ b/res/layout/song_item.xml
@@ -41,7 +41,7 @@
                 android:layout_marginTop="4dip">
 
             <ImageView
-                    android:id="@+id/img_favorite"
+                    android:id="@+id/img_favorite2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/heart"
