--- a/CapoeiraLyrics/res/layout/song_details.xml
+++ b/CapoeiraLyrics/res/layout/song_details.xml
@@ -13,5 +13,8 @@
             style="@style/ActionBar"
             />
 
-
+    <WebView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            />
 </LinearLayout>
